add Smile Modal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/style.min.css" rel="stylesheet">
 
-    <title>JB Online Trading</title>
+    <title>Welcome To JB Online Trading</title>
 </head>
 
 <body>
@@ -328,6 +328,30 @@
 
         </div>
     </div>
+
+<!-- Modal -->
+<div class="modal fade smileModal" id="smileModal" tabindex="-1" aria-labelledby="smileModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 473.931 473.931" style="enable-background:new 0 0 473.931 473.931;" xml:space="preserve">
+       <circle style="fill:#FFC10E;" cx="236.966" cy="236.966" r="236.966"/>
+       <path style="fill:#333333;" d="M81.391,237.127c0,85.911,69.649,155.56,155.56,155.56c85.915,0,155.567-69.649,155.567-155.56
+           H81.391z"/>
+       <path style="fill:#CA2027;" d="M150.452,298.705c0,47.771,38.731,86.498,86.498,86.498c47.775,0,86.502-38.731,86.502-86.498
+           H150.452z"/>
+       <g>
+           <circle style="fill:#333333;" cx="164.937" cy="155.231" r="37.216"/>
+           <circle style="fill:#333333;" cx="305.664" cy="155.231" r="37.216"/>
+       </g>
+       </svg>
+       
+        </div>
+      </div>
+    </div>
+  </div>
+
     <script src="./js/jquery.min.js"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/selectize.min.js"></script>
@@ -342,6 +366,13 @@
             fx: 'flipHorz',
             timeout: 2000
         });
+
+       
+        var myModal = new bootstrap.Modal(document.getElementById('smileModal'), {
+            keyboard: false
+        });
+        myModal.show()
+
 
     </script>
 
