--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 <div class="dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="./images/no_user.png" class="avatar img-fluid rounded-circle mr-1"
-                            alt="Chris Wood" /> <span class="text-dark  d-none  d-md-inline">Chris Wood</span>
+                       <span class="text-dark  d-none  d-md-inline">Chris Wood</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDarkDropdownMenuLink">
                         <li><a class="dropdown-item" href="#">Action</a></li>
@@ -46,6 +45,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
+                    <input type="text" class="payout" value="PAYOUT" size="10" autocomplete="off">
                     <div class="whiteBox boxWrap">
                         <h3>Upcoming Draw</h3>
                         <p>05:45 PM </p>
@@ -76,12 +76,6 @@
                             <span class="saprator">:</span>
                             <span id="seconds"></span>
                         </div>
-                        <div class="time_mn_box">
-                            <div id="draw_time"></div>
-                            <div id="reverse_time_new"></div>
-                            <div id="hm_timer"></div>
-                        </div>
-
                     </div>
                 </div>
                 <div class="col-lg">
@@ -100,17 +94,16 @@
                                     <div class="balanceBox">
                                         <div class="balance">Your Balance : <span>7,699.00</span></div>
                                         <div class="dated">11 Feb 2021 <span>4:53:20 PM</span></div>
-                                        <input type="text" value="PAYOUT" size="10" autocomplete="off">
                                         <div class="total">Total : <span>11 X 11 = 121</span></div>
                                     </div>
                                 </div>
                                 <div class="col-lg">
-                                    <div class="row">
+                                    <div class="row row-5-cols">
                                         <div class="col-lg-auto col-5-cols">
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/1_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -119,7 +112,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/2_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -128,7 +121,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/3_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -137,7 +130,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/1_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -146,7 +139,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/5_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -155,7 +148,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/6_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -164,7 +157,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/7_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -173,7 +166,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/8_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -182,7 +175,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/9_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -191,7 +184,7 @@
                                             <div class="thumbBox">
                                                 <img class="img-fluid" src="./images/10_l.jpg" title="Tara yantra"
                                                     alt="Tara yantra" data-rel="tooltip" />
-                                                <h6>Tara yantra</h6>
+                                                <h6>Tara</h6>
                                                 <input type="text" name="yantra[1]" value="5" size="10"
                                                     class="inputSuccess" maxlength="4" autocomplete="off">
                                             </div>
@@ -212,7 +205,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/1_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -223,7 +216,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/2_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -234,7 +227,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/3_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -245,7 +238,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/1_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -256,7 +249,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/5_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -267,7 +260,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/6_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -278,7 +271,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/7_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -289,7 +282,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/8_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -300,7 +293,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/9_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -311,7 +304,7 @@
                         <div class="thumbBox">
                             <img class="img-fluid" src="./images/10_l.jpg" title="Tara yantra" alt="Tara yantra"
                                 data-rel="tooltip" />
-                            <h6>Tara yantra</h6>
+                            <h6>Tara</h6>
                             <div class="dateTime">
                                 <span class="date">11-02-2021</span>
                                 <span class="time">06:00 PM</span>
@@ -334,19 +327,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            viewBox="0 0 473.931 473.931" style="enable-background:new 0 0 473.931 473.931;" xml:space="preserve">
-       <circle style="fill:#FFC10E;" cx="236.966" cy="236.966" r="236.966"/>
-       <path style="fill:#333333;" d="M81.391,237.127c0,85.911,69.649,155.56,155.56,155.56c85.915,0,155.567-69.649,155.567-155.56
-           H81.391z"/>
-       <path style="fill:#CA2027;" d="M150.452,298.705c0,47.771,38.731,86.498,86.498,86.498c47.775,0,86.502-38.731,86.502-86.498
-           H150.452z"/>
-       <g>
-           <circle style="fill:#333333;" cx="164.937" cy="155.231" r="37.216"/>
-           <circle style="fill:#333333;" cx="305.664" cy="155.231" r="37.216"/>
-       </g>
-       </svg>
-       
+          <img class="img-fluid" src="./images/jackpot.jpg" alt="jackpot" />
         </div>
       </div>
     </div>
