Fixes Screen Resolution issue

--- a/index.html
+++ b/index.html
@@ -354,6 +354,81 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-auto col-5-cols">
+                        <div class="thumbBox">
+                            <div class="imgWrap">
+                            <img class="img-fluid" src="./images/10_l.jpg" title="Tara yantra" alt="Tara yantra"
+                                data-rel="tooltip" />
+                            </div>
+                            <div class="caption">
+                                <h6>Tara</h6>
+                                <div class="dateTime">
+                                    <span class="date">11-02-2021</span>
+                                    <span class="time">06:00 PM</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-auto col-5-cols">
+                        <div class="thumbBox">
+                            <div class="imgWrap">
+                            <img class="img-fluid" src="./images/10_l.jpg" title="Tara yantra" alt="Tara yantra"
+                                data-rel="tooltip" />
+                            </div>
+                            <div class="caption">
+                                <h6>Tara</h6>
+                                <div class="dateTime">
+                                    <span class="date">11-02-2021</span>
+                                    <span class="time">06:00 PM</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-auto col-5-cols">
+                        <div class="thumbBox">
+                            <div class="imgWrap">
+                            <img class="img-fluid" src="./images/10_l.jpg" title="Tara yantra" alt="Tara yantra"
+                                data-rel="tooltip" />
+                            </div>
+                            <div class="caption">
+                                <h6>Tara</h6>
+                                <div class="dateTime">
+                                    <span class="date">11-02-2021</span>
+                                    <span class="time">06:00 PM</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-auto col-5-cols">
+                        <div class="thumbBox">
+                            <div class="imgWrap">
+                            <img class="img-fluid" src="./images/10_l.jpg" title="Tara yantra" alt="Tara yantra"
+                                data-rel="tooltip" />
+                            </div>
+                            <div class="caption">
+                                <h6>Tara</h6>
+                                <div class="dateTime">
+                                    <span class="date">11-02-2021</span>
+                                    <span class="time">06:00 PM</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-auto col-5-cols">
+                        <div class="thumbBox">
+                            <div class="imgWrap">
+                            <img class="img-fluid" src="./images/10_l.jpg" title="Tara yantra" alt="Tara yantra"
+                                data-rel="tooltip" />
+                            </div>
+                            <div class="caption">
+                                <h6>Tara</h6>
+                                <div class="dateTime">
+                                    <span class="date">11-02-2021</span>
+                                    <span class="time">06:00 PM</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
