--- a/login.html
+++ b/login.html
@@ -36,6 +36,13 @@
                             <form class="form"> 
                                 <input type="text" name="" class="form-control mb-3" placeholder="Email or Phone"> 
                                 <input type="text" name="" class="form-control mb-3" placeholder="Password"> 
+
+                                <div class="checkbox mb-3">
+                                    <label>
+                                      <input type="checkbox" value="remember-me"> Remember me
+                                    </label>
+                                  </div>
+
                                 <div class="d-grid gap-2">
                                 <button class="btn btn-success btn-block">Login</button> 
                                 </div>
